<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/letter"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:contentDescription="@string/leter"
        android:scaleType="fitXY" />

    <TextView
        android:id="@+id/letterPropic"
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:layout_below="@+id/letter"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="28sp"
        android:textStyle="bold" />


    <ImageButton
        android:id="@+id/audioLetter"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/audio"
        android:onClick="startMusik"
        android:background="@drawable/music"
        android:layout_below="@+id/letterPropic"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp" />

    <ImageView
        android:id="@+id/leftSign"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/letter"
        android:contentDescription="@string/leftSing" />

    <ImageView
        android:id="@+id/rightSign"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/letter"
        android:contentDescription="@string/rightSing" />


</RelativeLayout>